WebSearch refactorings & improvements (#39)
* WebSearch refactorings

* TitleWebSearchpackage

* content search exact part

* readd & deprecate unused signatures